v0.9.2, 01/12/2018 -- Minor revision
* Added TypedDict type checker
* Added TypedTuple type checker
* Added LimitedTuple validator
* Refactored error messages for the All validators and type checkers
* Added skipping type checks in Typed decorator for arguments marked with ...
* Added skipping limit checks in Bounded decorator for arguments marked with ...
* Added type introspection for iterables to Typed decorator
* Refactored error messages from Typed decorator

v0.9.1, 01/12/2018 -- Minor revision
* Added type checkers for functions and methods
* Added validator for callables

v0.9.0, 01/12/2018 -- Initial release