@@ -7,6 +7,8 @@ v0.9.2, 01/12/2018 -- Minor revision
 * Added skipping limit checks in Bounded decorator for arguments marked with ...
 * Added type introspection for iterables to Typed decorator
 * Refactored error messages from Typed decorator
+* Added bounds introspection for iterables to Bounded decorator
+* Refactored error messages from Bounded decorator
 
 v0.9.1, 01/12/2018 -- Minor revision
 * Added type checkers for functions and methods
